# 18AAD-mlops

./: README.md  azure-pipeline.yml  deploy_azureml_pipeline.py  pyproject.toml  variables.yml
components/data_prep/: data_prep.py  data_prep.yml
components/train/: train.py  train.yml
dependencies/: conda.yaml
notebooks/: model_deployment.ipynb  traffic_config.json
