[tool.poetry]
name = "azureml_deployment"
version = "0.1.0"
description = ""
authors = ["Simon DALECKY"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
azure-ai-ml = "^1.15.0"
mlflow = "^2.12.1"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
